--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -18,8 +19,14 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/webpack": "^5.28.0",
+    "autoprefixer": "^10.3.1",
+    "css-loader": "^6.2.0",
     "dotenv": "^10.0.0",
     "html-webpack-plugin": "^5.3.2",
+    "postcss-loader": "^6.1.1",
+    "sass": "^1.38.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
